--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+/*.boite {
+  width: 400px;
+  border: 5px solid green;
+  margin: 10px;
+}*/
+.styleBorder {
+  background-color: purple;
+  width: 400px;
+  margin: 10px;
+}
+.styleBorder-red {
+  background-color: red;
+  width: 400px;
+  margin: 10px;
+}
+.styleBorder-blue {
+  background-color: blue;
+  width: 400px;
+  margin: 10px;
+}
+.styleBorder-yellow {
+  background-color: yellow;
+  width: 400px;
+  margin: 10px;
+}
+Header h1 {
+  text-align: center;
+  background-color: black;
   color: white;
+  height: 50px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer p {
+  text-align: center;
+  background-color: grey;
+  height: 50px;
 }
